# engine-simulation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dyno_cli.py  pyproject.toml
.github/workflows/: ci.yml
engine_sim/: __init__.py  dyno.py  ecu.py  engine.py  presets.py  session.py  specs.py  turbo.py  units.py
engine_sim/core/: __init__.py  automatic_drivetrain.py  clutch.py  drivetrain.py  dyno.py  ecu.py  engine.py  tire.py  torque_converter.py  turbo.py
engine_sim/presets/: __init__.py  tires.py  transmissions.py
engine_sim/presets/engines/: __init__.py  b58_340i.py  ea888_gen3_is20.py  ea888_gen3b_is38.py  ls2_na.py
engine_sim/presets/turbos/: __init__.py  b58_big_single_aftermarket.py  is20.py  is38.py  (+5 more)
godot/: project.godot
godot/scenes/: DragRace.tscn  Dyno.tscn
godot/scripts/: bg_city.gd  bg_city.gd.uid  bg_guardrail.gd  bg_guardrail.gd.uid  bg_mountains.gd  bg_mountains.gd.uid  bg_road.gd  bg_road.gd.uid  car_body.gd  car_body.gd.uid  drag_audio.gd  drag_audio.gd.uid  drag_controller.py  drag_race.gd  drag_race.gd.uid  drag_scene_layout.gd  drag_scene_layout.gd.uid  dyno_audio.gd  dyno_audio.gd.uid  dyno_controller.py  dyno_graph.gd  dyno_graph.gd.uid  dyno_ui.gd  dyno_ui.gd.uid  finish_line_shape.gd  finish_line_shape.gd.uid  sky_shape.gd  sky_shape.gd.uid  wheel_shape.gd  wheel_shape.gd.uid
tests/: test_automatic_transmission.py  test_b58_validation.py  test_chassis_dyno.py  test_cli.py  test_components.py  test_drivetrain.py  test_drivetrain_layout.py  test_ea888_validation.py  test_ls2_validation.py  test_road_surface.py  test_session.py
